--- a/ReportService/ReportService/ReportService.csproj
+++ b/ReportService/ReportService/ReportService.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>12.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <NoWarn>CS1591, CS8981</NoWarn>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
@@ -14,13 +19,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="1.50.4" />
-    <PackageReference Include="Facebook" Version="7.0.6" />
-    <PackageReference Include="iTextSharp" Version="5.5.13" />
-    <PackageReference Include="json-serialize" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AppCenter.Push" Version="1.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
-    <PackageReference Include="MySql.Data" Version="6.10.6" />
     <PackageReference Include="Npgsql" Version="3.2.6" />
   </ItemGroup>
 
