--- a/ReportService/ReportService/appsettings.json
+++ b/ReportService/ReportService/appsettings.json
@@ -13,6 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "BuhService": "http://buh.local/api"
+    "BuhService": "http://buh.local/api",
+    "SalaryService": "http://salary.local/api"
   }
 }
