--- a/ReportService/ReportService/appsettings.json
+++ b/ReportService/ReportService/appsettings.json
@@ -14,6 +14,7 @@
   },
   "ConnectionStrings": {
     "BuhService": "http://buh.local/api",
-    "SalaryService": "http://salary.local/api"
+    "SalaryService": "http://salary.local/api",
+    "DbConnection": "Host=192.168.99.100;Username=postgres;Password=1;Database=employee"
   }
 }
