--- a/ReportService/ReportService/appsettings.json
+++ b/ReportService/ReportService/appsettings.json
@@ -13,6 +13,7 @@
     }
   },
   "ConnectionStrings": {
+    "In reality these connection strings would come from Vault, environment or elsewhere": "",
     "BuhService": "http://buh.local/api",
     "SalaryService": "http://salary.local/api",
     "DbConnection": "Host=192.168.99.100;Username=postgres;Password=1;Database=employee"
